--- a/src/main/webapp/app/entities/focus-group/focus-group-detail.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-detail.component.html
@@ -1,30 +1,23 @@
 <div class="row justify-content-center">
-    <div class="col-8 card">
-        <div class="card-header row">
-            <div class="col-xl-8 col-lg-7 col-md-12 col-sm-12">
-                <h2>Grupo de enfoque - {{focusGroup.name}}</h2>
-            </div>
-        </div>
-        <hr>
-        <div class="card-body">
-            <div class="card-block row justify-content-between">
-                <div class="col-lg-7 col-md-12 col-sm-12">
-                    <div class="">
-                        <span class="text-bold-500 primary display-block">Descripción:</span>
-                        <span>{{focusGroup.description}}</span>
-                    </div>
+    <div class="card col-8">
+        <div class="card-header">
+            <div class="row">
+                <div class="col-sm-12 col-12 col-md-12 col-lg-7">
+                    <h3>{{focusGroup.name}}</h3>
+                    <h5 class="col-12 col-md-12 col-sm-12">Información del grupo</h5>
                 </div>
-                <div class="col-lg-5 col-md-12 col-sm-12">
-                    <div id="codeCard" class="card bg-primary">
+                <div class="col-sm-12 col-12 col-md-12 col-lg-5">
+                    <div id="codeCard" class="card bg-primary cursor-pointer" (click)="copy()">
                         <div class="card-body col-12">
                             <div class="px-3 py-3">
                                 <div class="media">
                                     <div class="media-left align-self-center">
-                                        <i class="ft-clipboard white font-large-1 float-left"></i>
+                                        <i class="ft-copy white font-large-1 float-left"></i>
                                     </div>
                                     <div class="media-body white text-right">
-                                        <span class="text-bold-500 display-block">Código del grupo</span>
-                                        <span>{{focusGroup.code}}<!-- Haga click para copiar.--></span>
+                                        <span
+                                            class="text-bold-500 display-block overflow-hidden">Código del grupo</span>
+                                        <span class="display-block overflow-hidden">{{focusGroup.code}}</span>
                                     </div>
                                 </div>
                             </div>
@@ -32,42 +25,89 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="card-body">
             <div class="card-block">
-                <span class="text-bold-500 primary display-block">Fecha de inicio:</span>
-                <span>{{focusGroup.beginDate | date:'longDate'}}</span>
-            </div>
-            <div class="card-block">
-                <span class="text-bold-500 primary display-block">Fecha de finalización:</span>
-                <span>{{focusGroup.endDate | date:'longDate'}}</span>
-            </div>
-            <div class="card-block">
-                <span class="text-bold-500 primary display-block">Incentivo:</span>
-                <span *ngIf="focusGroup.incentive; else noIncentive">{{focusGroup.incentive}}</span>
-                <ng-template #noIncentive>
-                    <span>No hay incentivos seleccionados.</span>
-                </ng-template>
-            </div>
-            <div class="card-block">
-                <span class="text-bold-500 primary display-block">Prueba de aptitud:</span>
-                <span *ngIf="focusGroup.aptitudeTest; else noFocusGroup">{{focusGroup.aptitudeTest.name}}   <i
-                    class="ft-search font-medium-2 cursor-pointer"
-                    [routerLink]="['/aptitude-test', focusGroup.aptitudeTest.id, 'view' ]"></i></span>
-                <ng-template #noFocusGroup>
-                    <span>No se seleccionó una prueba de aptitud.</span>
-                </ng-template>
-            </div>
-            <div class="card-block">
-                <button type="submit"
-                        (click)="previousState()"
-                        class="btn btn-raised btn-warning mr-1">
-                    <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span> Volver</span>
-                </button>
+                <div class="mb-3">
+                    <span class="text-bold-500 primary">Descripción:</span>
+                    <span class="display-block overflow-hidden">{{focusGroup.description}}</span>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <ul class="no-list-style">
+                            <li class="mb-2">
+                                <span class="text-bold-500 primary"><a><i class="ft-calendar font-small-3"></i> Fecha de inicio:</a></span>
+                                <span
+                                    class="display-block overflow-hidden">{{focusGroup.beginDate | date:'longDate'}}</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <ul class="no-list-style">
+                            <li class="mb-2">
+                                <span class="text-bold-500 primary"><a><i class="ft-calendar font-small-3"></i> Fecha de finalización:</a></span>
+                                <span
+                                    class="display-block overflow-hidden">{{focusGroup.endDate | date:'longDate'}}</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <ul class="no-list-style">
+                            <li class="mb-2">
+                                <span class="text-bold-500 primary"><a><i class="ft-calendar font-small-3"></i> Incentivo:</a></span>
+                                <span *ngIf="focusGroup.incentive; else noIncentive"
+                                      class="display-block overflow-hidden">{{focusGroup.incentive.name}}</span>
+                                <ng-template #noIncentive>
+                                    <span class="display-block overflow-hidden">No hay incentivos seleccionados.</span>
+                                </ng-template>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <hr>
+                <div id="questionCardSection" class="row">
+                    <h5 class="col-12 col-md-12 col-sm-12"><i class="ft-clipboard"></i> Prueba de aptitud</h5>
+                    <hr>
+                    <div *ngIf="focusGroup.aptitudeTest; else noAptitudeTest" class="card-block col-12">
+                        <div id="question{{i}}" class="card bg-blue-grey bg-lighten-5"
+                             *ngFor="let question of focusGroup.aptitudeTest.questions; let i = index">
+                            <div class="card-header">
+                                <span class="text-bold-500 primary">¿{{question.question}}?</span>
+                            </div>
+                            <div class="card-body">
+                                <div class="card-block">
+                                    <div class="card-block">
+                                            <span *ngFor="let answer of question.answers" class="display-block"><i
+                                                class="ft-minus"></i>{{answer.answer}}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ng-template #noAptitudeTest>
+                        <span>No se seleccionó una prueba de aptitud.</span>
+                    </ng-template>
+                </div>
+                <div class="card-block">
+                    <button type="submit"
+                            (click)="previousState()"
+                            class="btn btn-raised btn-warning mr-1">
+                        <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span> Volver</span>
+                    </button>
 
-                <button type="button"
-                        [routerLink]="['/focus-group', focusGroup.id, 'edit']"
-                        class="btn btn-raised btn-primary">
-                    <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span> Editar</span>
-                </button>
+                    <button type="button"
+                            [routerLink]="['/focus-group', focusGroup.id, 'edit']"
+                            class="btn btn-raised btn-primary">
+                        <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span> Editar</span>
+                    </button>
+
+                    <button type="button"
+                            [routerLink]="['/', 'focus-group', { outlets: { popup: focusGroup.id + '/delete'} }]"
+                            class="btn btn-raised btn-danger" [disabled]="!isCancelable">
+                        <span><i class="ft-x font-medium-3 mr-2"></i> Cancelar</span>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
