--- a/src/main/webapp/app/entities/focus-group/focus-group.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="card-body">
                 <div class="card-block">
-                    <jhi-alert></jhi-alert>
+                    <!--<jhi-alert></jhi-alert>-->
                     <div class="table-responsive" *ngIf="focusGroups">
                         <table class="table table-responsive-md text-center">
                             <thead>
@@ -47,11 +47,11 @@
                                     <a class="success p-0" data-original-title="" title="" [routerLink]="['/focus-group', focusGroup.id, 'edit']">
                                         <i class="ft-edit-2 font-medium-3 mr-2"></i>
                                     </a>
-                                    <a class="danger p-0" data-original-title="" title="" [routerLink]="['/', 'focus-group', { outlets: { popup: focusGroup.id + '/delete'} }]"
-                                       replaceUrl="true"
-                                       queryParamsHandling="merge">
-                                        <i class="ft-x font-medium-3 mr-2"></i>
-                                    </a>
+                                    <!--<a class="danger p-0" data-original-title="" title="" [routerLink]="['/', 'focus-group', { outlets: { popup: focusGroup.id + '/delete'} }]"-->
+                                       <!--replaceUrl="true"-->
+                                       <!--queryParamsHandling="merge">-->
+                                        <!--<i class="ft-x font-medium-3 mr-2"></i>-->
+                                    <!--</a>-->
                                 </td>
                             </tr>
                             </tbody>
