find participants by group
only the back end

--- a/src/main/webapp/app/entities/focus-group/focus-group-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-delete-dialog.component.html
@@ -1,19 +1,19 @@
 <form name="deleteForm" (ngSubmit)="confirmDelete(focusGroup.id)">
     <div class="modal-header">
-        <h4 class="modal-title">Confirm delete operation</h4>
+        <h4 class="modal-title">Confirmar cancelación de grupo de enfoque</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p id="jhi-delete-focusGroup-heading">Are you sure you want to delete this Focus Group?</p>
+        <p id="jhi-delete-focusGroup-heading">¿Está seguro que desea cancelar este grupo de enfoque?</p>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
-            <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span>Cancel</span>
+        <button type="button" class="btn btn-raised btn-secondary" data-dismiss="modal" (click)="clear()">
+            <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span>No, volver.</span>
         </button>
-        <button id="jhi-confirm-delete-focusGroup" type="submit" class="btn btn-danger">
-            <fa-icon [icon]="'times'"></fa-icon>&nbsp;<span>Delete</span>
+        <button id="jhi-confirm-delete-focusGroup" type="submit" class="btn btn-raised btn-danger">
+            <fa-icon [icon]="'times'"></fa-icon>&nbsp;<span>Sí, cancelar.</span>
         </button>
     </div>
 </form>
