--- a/src/main/webapp/app/entities/focus-group/focus-group-detail.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-detail.component.html
@@ -56,6 +56,68 @@
                     <span>No se seleccionó una prueba de aptitud.</span>
                 </ng-template>
             </div>
+            <hr>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content-header">Friends</div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-8 col-sm-12 col-md-8 col-lg-6 col-xl-4">
+                    <div class="card shadow">
+                        <div class="card-header text-center">
+                            <img src="../../../content/template/img/portrait/small/avatar-s-3.png" alt="Brek" width="150" class="rounded-circle gradient-mint">
+                        </div>
+                        <div class="card-body">
+                            <div class="card-block text-center">
+                                <h4 class="card-title">Brek Padio</h4>
+                                <p class="category text-gray font-small-4">CEO / Co-Founder</p>
+                                <a class="btn btn-lg gradient-mint font-small-2 white p-2 mr-2">Add as Friend</a>
+                                <a class="btn btn-lg btn-outline-grey font-small-2 p-2">Message</a>
+                                <hr class="grey">
+                                <div class="row grey">
+                                    <div class="col-4">
+                                        <a><i class="ft-star mr-1"></i> <span>4.9</span></a>
+                                    </div>
+                                    <div class="col-4">
+                                        <a><i class="ft-globe mr-1"></i> <span>USA</span></a>
+                                    </div>
+                                    <div class="col-4">
+                                        <a><i class="ft-book mr-1"></i> <span>21</span></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-8 col-sm-12 col-md-8 col-lg-6 col-xl-4">
+                    <div class="card shadow">
+                        <div class="card-header text-center">
+                            <img src="../../../content/template/img/portrait/small/avatar-s-3.png" alt="Brek" width="150" class="rounded-circle gradient-mint">
+                        </div>
+                        <div class="card-body">
+                            <div class="card-block text-center">
+                                <h4 class="card-title">Brek Padio</h4>
+                                <p class="category text-gray font-small-4">CEO / Co-Founder</p>
+                                <a class="btn btn-lg gradient-mint font-small-2 white p-2 mr-2">Add as Friend</a>
+                                <a class="btn btn-lg btn-outline-grey font-small-2 p-2">Message</a>
+                                <hr class="grey">
+                                <div class="row grey">
+                                    <div class="col-4">
+                                        <a><i class="ft-star mr-1"></i> <span>4.9</span></a>
+                                    </div>
+                                    <div class="col-4">
+                                        <a><i class="ft-globe mr-1"></i> <span>USA</span></a>
+                                    </div>
+                                    <div class="col-4">
+                                        <a><i class="ft-book mr-1"></i> <span>21</span></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="card-block">
                 <button type="submit"
                         (click)="previousState()"
