--- a/src/main/webapp/app/entities/focus-group/focus-group-management-login.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-management-login.component.html
@@ -17,7 +17,7 @@
                                     <div class="form-group">
                                         <div class="col-md-12">
                                             <input type="text" class="form-control" name="code" id="code"
-                                                   placeholder="Codigo de grupo" required [(ngModel)]="code">
+                                                   placeholder="Codigo de grupo" required [(ngModel)]="code" [(ngModel)]="password" [(ngModel)]="username">
                                         </div>
                                     </div>
                                     <div class="form-group">
