--- a/src/main/webapp/app/entities/test-result/test-result.component.html
+++ b/src/main/webapp/app/entities/test-result/test-result.component.html
@@ -6,7 +6,26 @@
             </div>
             <div class="card-body">
                 <div class="card-block">
-                    <jhi-alert></jhi-alert>
+                    <div class="row">
+                        <div class="col-sm-12 col-3 col-md-3 col-lg-3 col-xl-3">
+                            <div class="input-group my-3">
+                                <div class="input-group-prepend">
+                                    <i class="input-group-text ft-search info"></i>
+                                </div>
+                                <input type="text" jhiNumericOnly  class="form-control" maxlength="5" placeholder="Buscar por nota..."
+                                       [(ngModel)]="gradeInput"/>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-9 col-md-9 col-lg-9 col-xl-9">
+                            <div class="input-group my-3">
+                                <div class="input-group-prepend">
+                                    <i class="input-group-text ft-search info"></i>
+                                </div>
+                                <input type="text"  class="form-control"  placeholder="Buscar por nombre..."
+                                       [(ngModel)]="nameInput"/>
+                            </div>
+                        </div>
+                    </div>
                     <div class="table-responsive" *ngIf="testResults">
                         <table class="table table-responsive-md text-center">
                             <thead>
@@ -21,7 +40,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr *ngFor="let testResult of testResults ;trackBy: trackId">
+                            <tr *ngFor="let testResult of testResults | testParticipantFilter:nameInput | testResultFilter:gradeInput; trackBy: trackId">
                                 <td><a [routerLink]="['/test-result', testResult.id, 'view' ]">{{testResult.id}}</a>
                                 </td>
                                 <td>
