--- a/src/main/webapp/app/entities/user-app/subadmin-form.component.html
+++ b/src/main/webapp/app/entities/user-app/subadmin-form.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title" id="basic-layout-form-center">Usuario</h4>
+                <h4 class="card-title" id="basic-layout-form-center">Sub-administrador</h4>
 
                 <div class="alert alert-success" *ngIf="success">
                     <strong>Su registro ha sido exitoso!</strong> Por favor revise su correo para verificar su cuenta.
